banner swiper added

--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
 		"@angular/platform-browser-dynamic": "~13.0.0",
 		"@angular/router": "~13.0.0",
 		"rxjs": "~7.4.0",
+		"svgstore": "^3.0.1",
+		"swiper": "^8.0.6",
 		"tslib": "^2.3.0",
-		"zone.js": "~0.11.4",
-		"svgstore": "^3.0.1"
+		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "~13.0.3",
