--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@angular/animations": "~13.0.0",
 		"@angular/cdk": "^13.3.4",
+		"@angular/cdk-experimental": "^13.3.5",
 		"@angular/common": "~13.0.0",
 		"@angular/compiler": "~13.0.0",
 		"@angular/core": "~13.0.0",
