--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@angular/platform-browser": "~13.0.0",
 		"@angular/platform-browser-dynamic": "~13.0.0",
 		"@angular/router": "~13.0.0",
+		"leaflet": "^1.8.0",
 		"rxjs": "~7.4.0",
 		"svgstore": "^3.0.1",
 		"swiper": "^8.0.6",
@@ -31,6 +32,7 @@
 		"@angular/cli": "~13.0.3",
 		"@angular/compiler-cli": "~13.0.0",
 		"@types/jasmine": "~3.10.0",
+		"@types/leaflet": "^1.7.10",
 		"@types/node": "^12.11.1",
 		"jasmine-core": "~3.10.0",
 		"karma": "~6.3.0",
